[package]
name = "price-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dotenv = "0.15.0"
duckdb = { version = "1.1.1", features = ["bundled"] }
futures = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
solana-client = "2.1.1"
solana-sdk = "2.1.1"
tokio = "1.41.1"

